--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title style="background-color: aliceblue;">My Awesome Website</title>
+    <style>
+        table {
+            width: 50%;
+        }
+        table, th, tr, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 25px;
+            text-align: left;
+        }
+
+        ul {
+            list-style-type:circle;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="color: #40196d; align-content: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">My First Heading</h1>
-    <p style="color: #40196d; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, quibusdam. Doloribus nobis quis 
+    <nav style="text-align: center; color: #40196d;">
+        <p>Home</p>
+        <p>About Us</p>
+        <p>FAQ</p>
+        <p>Login</p>
+    </nav>
+    <h1 style=" text-align: center; #40196d; align-content: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, Oxygen; border: 2px solid green;">My First Heading</h1>
+    <p style="color: #40196d; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, quibusdam. Doloribus nobis quis 
         ipsa libero itaque illo quasi necessitatibus, illum eaque officiis omnis dignissimos iusto
          voluptatum, dolores consequuntur, maiores nemo molestias consectetur velit ducimus expedita 
          at porro? Voluptatem dicta aliquid, veniam inventore adipisci, ipsam libero magni exercitation 
          em debitis est natus.</p>
+
+         <iframe src="W3school.com" height="200" weight="50%" frameborder="0">Google</iframe>
+<table>
+    <tr>
+        <th>Fruits</th>
+        <th>Vegitables</th>
+        <th>Cereal</th>
+    </tr>
+    <tr>
+        <td>Mango</td>
+        <td>Brocoli</td>
+        <td>Millet</td>
+    </tr>
+</table>
+
+    <h3> My List</h3>
+<ul>
+    <li>BOoks</li>
+    <li>Chocolate</li>
+    <li>Pen</li>
+</ul>
+
+<form action="">
+    <input type="text" name="fname" id="" placeholder="Firstname">
+    <select name="Fruits" id=""></select>
+    <textarea name="text" id=""></textarea>
+</form>
 </body>
 </html>
